--- a/admin/my-project-focus.html
+++ b/admin/my-project-focus.html
@@ -75,7 +75,7 @@
                     </a>
                     <a href="my-project-focus.html" class="list-group-item list-group-item-info">
                         <div class="row">
-                            <div class="col-sm-8 col-lg-8">关注的项目</div>
+                            <div class="col-sm-8 col-lg-8">收藏的项目</div>
                             <div class="col-sm-4 col-lg-4 text-right">
                                 <i class="glyphicon glyphicon-chevron-right fz10"></i><span class="sr-only">更多</span>
                             </div>
@@ -113,7 +113,7 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-lg-10">
-                                <h4>我关注的项目</h4>
+                                <h4>我收藏的项目</h4>
                             </div>
                             <div class="col-lg-2">
                                 <!--<button class="btn btn-success btn-sm" onclick=" location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-plus"></span> 创建项目</button>-->
