--- a/admin/my-project-help.html
+++ b/admin/my-project-help.html
@@ -75,7 +75,7 @@
                     </a>
                     <a href="my-project-focus.html" class="list-group-item">
                         <div class="row">
-                            <div class="col-sm-8 col-lg-8">关注的项目</div>
+                            <div class="col-sm-8 col-lg-8">收藏的项目</div>
                             <div class="col-sm-4 col-lg-4 text-right">
                                 <i class="glyphicon glyphicon-chevron-right fz10"></i><span class="sr-only">更多</span>
                             </div>
