--- a/admin/user-page.html
+++ b/admin/user-page.html
@@ -56,6 +56,7 @@
                             </div>
                         </div>
                     </a>
+                    
                     <a href="user-page-upload.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">修改头像</div>
@@ -73,7 +74,22 @@
                             </div>
                         </div>
                     </a>
-                    
+                    <a href="my-project-feedback.html" class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-8 col-lg-8">我的回馈</div>
+                            <div class="col-sm-4 col-lg-4 text-right">
+                                <i class="glyphicon glyphicon-chevron-right fz10"></i><span class="sr-only">完善信息</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="user-page-favorites.html" class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-8 col-lg-8">我的收藏</div>
+                            <div class="col-sm-4 col-lg-4 text-right">
+                                <i class="glyphicon glyphicon-chevron-right fz10"></i><span class="sr-only">完善信息</span>
+                            </div>
+                        </div>
+                    </a>
 
                 </div>
 
