--- a/admin/project-workshop-4.html
+++ b/admin/project-workshop-4.html
@@ -179,9 +179,18 @@
 
 
                         </div>
-                        <div class="panel-footer text-right">
-                            <button class="btn btn-primary" onclick="window.location.href='project-workshop-3.html'">上一步</button>
-                            <button class="btn btn-primary" onclick="window.location.href = 'info-center-project.html'">完成</button>
+                        <div class="panel-footer">
+                            <div class="row">
+                                <div class="col-lg-6 text-left">
+                                    <a href="../project-view.html">查看项目主页</a>
+                                </div>
+                                <div class="col-lg-6 text-right">
+                                    <button class="btn btn-primary" onclick="window.location.href='project-workshop-3.html'">上一步</button>
+                                    <button class="btn btn-primary" onclick="window.location.href = 'info-center-project.html'">完成</button>
+                                </div>
+                            </div>
+                           
+                          
                         </div>
                     </div>
                 </div>
