--- a/admin/project-workshop-1.html
+++ b/admin/project-workshop-1.html
@@ -61,7 +61,7 @@
 
             </div>
             <div class="row">
-                <div class="col-lg-7" style="padding-left:0px;">
+                <div class="col-lg-8" style="padding-left:0px;">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="panel panel-default">
@@ -114,13 +114,13 @@
                                 <div class="panel-body">
                                     <table class="table table-bordered text-center mission-list-table" style="margin-bottom:0px;">
                                         <tr>
-                                            <td width="50">序号</td>
+                                            <td width="30">序号</td>
                                             <td width="50">里程碑</td>
                                             <td width="50">任务</td>
-                                            <td width="50">任务描述</td>
+                                            <td >任务描述</td>
                                             <td width="50">开始时间</td>
                                             <td width="50">结束时间</td>
-                                            <td width="50">负责人</td>
+                                            <td width="60">负责人</td>
                                             <td width="50">操作</td>
                                         </tr>
                                         <tr>
@@ -131,7 +131,7 @@
                                             <td>2014-10-17</td>
                                             <td>2014-10-31</td>
                                             <td>张三，李四</td>
-                                            <td>修改  忽略</td>
+                                            <td><a href="javascript:void(0)" data-toggle="modal" data-target="#edit-this-mission-admin">修改</a>  <a href="javascript:void(0)" data-toggle="modal" data-target="#Ignore-this-mission">忽略</a></td>
                                         </tr>
                                     </table>
                                 </div>
@@ -139,12 +139,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5" style="padding-right:0px;">
+                <div class="col-lg-4" style="padding-right:0px;">
                     <div class="panel panel-default">
                         <div class="panel-heading current-calendar">
                             <div class="row">
-                                <div class="col-lg-3">  任务日历 </div>
-                                <div class="col-lg-9 text-right"><span></span> </div>
+                                <div class="col-lg-4">  任务日历 </div>
+                                <div class="col-lg-8 text-right"><span></span> </div>
                             </div>
                         </div>
                         <div class="panel-body ">
@@ -157,10 +157,7 @@
                                             <button class="btn btn-primary btn-sm" data-calendar-nav="next">后 >></button>
                                         </div>
                                         <div class="btn-group">
-                                            <button class="btn btn-warning btn-sm" data-calendar-view="year">年</button>
                                             <button class="btn btn-warning active btn-sm" data-calendar-view="month">月</button>
-                                            <button class="btn btn-warning btn-sm" data-calendar-view="week">周</button>
-                                            <button class="btn btn-warning btn-sm" data-calendar-view="day">日</button>
                                         </div>
                                     </div>
                                 </div>
@@ -181,7 +178,52 @@
         </div>
         <div id="footer"></div>
     </div>
+    <!--修改任务负责人modal-->
+    <div class="modal fade" id="edit-this-mission-admin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">更换任务负责人</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <textarea rows="3" class="form-control" id="footprints-description" placeholder="忽略任务说明…"></textarea>
+                        </div>
+                    </div>
 
+                </div>
+                <div class="modal-footer">
+                    <a href="#" data-dismiss="modal">取消</a>
+                    <button type="button" class="btn btn-primary edit-this-mission-admin-yes">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--忽略任务modal-->
+    <div class="modal fade" id="Ignore-this-mission" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">忽略任务</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <textarea rows="3" class="form-control" id="footprints-description" placeholder="忽略任务说明…"></textarea>
+                        </div>
+                    </div>
+                   
+                </div>
+                <div class="modal-footer">
+                    <a href="#" data-dismiss="modal">取消</a>
+                    <button type="button" class="btn btn-primary Ignore-this-mission-yes">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -249,6 +291,15 @@
             $this.click(function () {
                 calendar.view($this.data('calendar-view'));
             });
+        });
+        //确定修改负责人
+        $(".edit-this-mission-admin-yes").click(function () {
+            $("#edit-this-mission-admin").modal("hide");
+        });
+
+        //确定忽略任务
+        $(".Ignore-this-mission-yes").click(function () {
+            $("#Ignore-this-mission").modal("hide");
         });
 
     </script>
