--- a/admin/head.html
+++ b/admin/head.html
@@ -13,10 +13,10 @@
                 <li class="active"><a href="home.html">首页</a></li>
                 <li><a href="#about">浏览项目</a></li>
                 <li class="dropdown">
-                    <a href="start-project-description.html " class=" dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
+                    <a href="start-project-description.html" class=" dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="start-project-1.html">筹资金</a></li>
-                        <li><a href="start-project-1.html" ">筹实物</a></li>
+                        <li><a href="start-project-1.html">筹实物</a></li>
                         <li><a href="#">发现小伙伴</a></li>
                                
                     </ul>
@@ -55,7 +55,7 @@
                     <div class="input-group">
                         <input type="text" placeholder="项目, 伙伴, 群组..." class="form-control  input-sm">
                         <span class="input-group-btn">
-                            <button class="btn btn-success btn-sm" type="button">搜 索</button>
+                            <button class="btn btn-success btn-sm" onclick="location.href='search-list.html'" type="button">搜 索</button>
                         </span>
                     </div>
                 </form>
