--- a/admin/start-project-2.html
+++ b/admin/start-project-2.html
@@ -80,7 +80,7 @@
                                                     <textarea rows="5" class="form-control" id="project-target" placeholder="项目目标描述…"></textarea>
                                                 </div>
                                             </div>
-                                            <div class="form-group yaoq-member-div" style="display:none">
+                                            <!--<div class="form-group yaoq-member-div" style="display:none">
                                                 <label for="project-member" class="col-sm-2 control-label">项目成员</label>
                                                 <div class="col-lg-10 yaoq-member" style="padding-top:7px;"></div>
                                             </div>
@@ -123,7 +123,7 @@
                                                 <div class="col-sm-10">
                                                     <button type="button" class="btn btn-success btn-sm add-project-member pull-right">邀请成员</button>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                             <div class="form-group">
                                                 <label for="project-marker" class="col-sm-2 control-label">里程碑</label>
                                                 <div class="col-sm-10">
@@ -178,10 +178,10 @@
                                             </div>
                                             <div class="form-group">
                                                 <label for="project-mission" class="col-sm-2 control-label"></label>
-                                                <div class="col-sm-4 mission-name-error">
+                                                <div class="col-sm-5 mission-name-error">
                                                     <input type="text" class="form-control" id="project-mission-name" placeholder="任务名称">
                                                 </div>
-                                                <div class="col-sm-2">
+                                                <!--<div class="col-sm-2">
                                                     <input type="hidden" class="mission-leader-h" value="" />
                                                     <div class="dropdown pull-left marleft10">
                                                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
@@ -195,8 +195,8 @@
                                                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">王五</a></li>
                                                         </ul>
                                                     </div>
-                                                </div>
-                                                <div class="col-sm-3">
+                                                </div>-->
+                                                <div class="col-sm-5">
                                                     <input type="hidden" class="mission-marker-m" value="" />
                                                     <div class="dropdown pull-left marleft10">
                                                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
