--- a/admin/start-project-3.html
+++ b/admin/start-project-3.html
@@ -518,12 +518,12 @@
                                                 </div>
                                             </div>
                                             <!------------------------------------------------------众筹基本设置------------------------------------------------------------------>
-                                            <!--<div class="form-group">
+                                            <div class="form-group">
                                                 <div class="col-sm-offset-4 col-sm-8 text-right">
                                                     <button type="button" class="btn btn-primary" onclick="window.location.href='start-project-2.html'">上一步</button>
                                                     <button type="submit" class="btn btn-primary">下一步</button>
                                                 </div>
-                                            </div>-->
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
