--- a/admin/head.html
+++ b/admin/head.html
@@ -29,8 +29,8 @@
                     <ul class="dropdown-menu ren-dropdown-menu-1" role="menu" aria-labelledby="ren-dropdown-toggle-user">
                         <li><a href="info-center.html">站点消息 <span class="badge">4</span></a> </li>
                         <li><a href="info-center-project.html">项目消息 </a></li>
-                        <li><a href="user-page.html">群组消息 <span class="badge">9</span></a></li>
-                        <li><a href="settings.html">私信消息 <span class="badge">20</span></a></li>
+                        <li><a href="group-post.html">群组消息 <span class="badge">9</span></a></li>
+                        <li><a href="info-center-inbox.html">私信消息 <span class="badge">20</span></a></li>
                         <li class="divider"></li>
                         <li><a href="info-center.html"><i class="glyphicon glyphicon-comment"></i> &nbsp;查看全部</a></li>
                     </ul>
