--- a/admin/info-center-project.html
+++ b/admin/info-center-project.html
@@ -76,9 +76,9 @@
                         </div>
                     </a>
 
-                    <a href="info-center.html" class="list-group-item">
+                    <a href="info-center-inbox.html" class="list-group-item">
                         <div class="row">
-                            <div class="col-sm-8 col-lg-8">联系人消息</div>
+                            <div class="col-sm-8 col-lg-8">私信消息</div>
                             <div class="col-sm-4 col-lg-4 text-right">
                                 <i class="glyphicon glyphicon-chevron-right fz10"></i><span class="sr-only">更多</span>
                             </div>
