--- a/admin/info-center-inbox-msg.html
+++ b/admin/info-center-inbox-msg.html
@@ -117,8 +117,59 @@
                     </form>
                     <div class="clearfix"></div>
                 </div>
-
+                <hr/>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="media">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="../img/default_avatar.gif" width="50" alt="...">
+                            </a>
+                            <div class="media-body fz12">
+                                <p class="mp0">
+                                    <a href="user-index.html">星星</a>：是 god is a girl！<br>当年听了很久的！
+                                </p>
+                                <div class="pt3">
+                                    今天 15:27
+                                    <span class="pull-right">
+                                        <a href="info-center-inbox-msg.html" class="nulinkunderline">
+                                            回复
+                                        </a> &nbsp;|
+                                        <a href="javascript:void(0)" class="nulinkunderline">
+                                            举报
+                                        </a> &nbsp;|
+                                        <a href="javascript:void(0)" class="nulinkunderline">
+                                            删除
+                                        </a>
+                                    </span>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
+                        <div class="dot mt15"></div>
+                        <div class="media">
+                            <a class="pull-left" href="#">
+                                <img class="media-object" src="../img/default_avatar.gif" width="50" alt="...">
+                            </a>
+                            <div class="media-body fz12">
+                                <p class="mp0 minheight30">
+                                    我：你好！
+                                </p>
+                                <div class="pt3">
+                                    2014-10-20  14:23
+                                    <span class="pull-right">
+                                        <a href="javascript:void(0)" class="nulinkunderline">
+                                             删除
+                                        </a>
+                                    </span>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </div>
+                    </div>
+                   
+                </div>
             </div>
+            
         </div>
     </div>
 
