--- a/admin/info-center-inbox.html
+++ b/admin/info-center-inbox.html
@@ -109,7 +109,7 @@
                             <h4>我的私信</h4>
                         </div>
                         <div class="col-lg-3 text-right ptb5">
-                            <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-pencil"></span> 写私信</a>
+                            <a href="info-center-inbox-msg.html" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-pencil"></span> 写私信</a>
                         </div>
                     </div>
 
