--- a/admin/project-workshop-1.html
+++ b/admin/project-workshop-1.html
@@ -46,7 +46,10 @@
             <div class="row">
                 <div class="btn-group btn-group-justified marbottom15">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary active">筹款中</button>
+                        <button type="button" class="btn btn-success active">创建中</button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default disabled">筹款中</button>
                     </div>
                     <div class="btn-group">
                         <button type="button" class="btn btn-default disabled">执行中</button>
@@ -95,7 +98,7 @@
                                             <a href="../project-view.html">查看项目主页</a>
                                         </div>
                                         <div class="col-lg-6">
-                                            <button type="button" class="btn btn-primary" onclick="window.location.href='project-workshop-2.html'">下一步</button>
+                                            <button type="button" class="btn btn-success" onclick="window.location.href='project-workshop-2.html'">下一步</button>
                                         </div>
                                     </div>
                                 </div>
