--- a/admin/start-project-1.html
+++ b/admin/start-project-1.html
@@ -24,6 +24,7 @@
     <link href="../css/lyp.css" rel="stylesheet">
     <link href="../css/rener.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
+    <link href="../css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/fileupload-ui/jquery.fileupload-ui.css">
     <!-- CSS adjustments for browsers with JavaScript disabled -->
     <noscript><link rel="stylesheet" href="../css/fileupload-ui/jquery.fileupload-ui-noscript.css"></noscript>
@@ -45,19 +46,16 @@
             <div class="row">
                 <div class="btn-group btn-group-justified marbottom15">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary active">基本信息</button>
+                        <button type="button" class="btn btn-success active">项目基本信息</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-default disabled">项目详述</button>
+                        <button type="button" class="btn btn-default disabled">项目详细计划</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-default disabled">项目回馈</button>
+                        <button type="button" class="btn btn-default disabled">预算及风险应对</button>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-default  disabled">预览</button>
-                    </div>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default disabled">发布</button>
+                        <button type="button" class="btn btn-default disabled">预览及创建</button>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -70,12 +68,12 @@
                                         <div class="text-left">
                                             <form class="form-horizontal" role="form" action="start-project-2.html">
                                                 <div class="form-group">
-                                                    <label for="project-name" class="col-sm-2 control-label">项目名称</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="text" class="form-control" id="project-name" placeholder="项目名称">
+                                                    <label for="project-name" class="col-sm-2 control-label">项目的名称：</label>
+                                                    <div class="col-sm-10 paddleft0">
+                                                        <input type="text" class="form-control" id="project-name" placeholder="请勿超过30个字">
                                                     </div>
                                                 </div>
-                                                <div class="form-group">
+                                                <!--<div class="form-group">
                                                     <label for="project-address" class="col-sm-2 control-label">发起地点</label>
                                                     <div class="col-sm-10">
                                                         <span class="already-select-school"></span> <a href="javascript:void(0);" data-toggle="modal" data-target="#select-school">点击这里选择学校</a>
@@ -185,8 +183,8 @@
                                                         </div>
                                                     </div>
 
-                                                </div>
-                                                <div class="form-group">
+                                                </div>-->
+                                                <!--<div class="form-group">
                                                     <label for="project-type" class="col-sm-2 control-label">项目类别</label>
                                                     <div class="col-sm-10">
                                                         <div class="dropdown">
@@ -201,64 +199,98 @@
                                                             </ul>
                                                         </div>
                                                     </div>
+                                                </div>-->
+                                                <div class="form-group">
+                                                    <label for="project-introduction" class="col-sm-2 control-label">项目的简述：</label>
+                                                    <div class="col-sm-10 paddleft0">
+                                                        <textarea rows="3" class="form-control" id="project-introduction" placeholder="请勿超过60字，请用简明的语言归纳项目的主题，这段文字将在展示项目预览界面显示给大家"></textarea>
+                                                    </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="project-cover-image" class="col-sm-2 control-label">封面图片</label>
-                                                    <div class="col-sm-10">
-                                                        <span class="btn btn-primary fileinput-button">
+                                                    <label for="project-cover-image" class="col-sm-2 control-label">封面图片:</label>
+                                                    <div class="col-sm-10 paddleft0">
+                                                        <span class="btn btn-danger fileinput-button">
                                                             <i class="glyphicon glyphicon-plus"></i>
                                                             <span>添加图片</span>
                                                             <input type="file" name="files[]" multiple="" id="project-cover-image">
                                                         </span>
-                                                        <span style="color:#808080">图片最佳尺寸为 220*150 像素，或控制在等同比例，不超过500kb</span>
+                                                        <span style="color:#808080">图片大小勿超过1M</span>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="project-time" class="col-sm-2 control-label">项目起止时间</label>
-                                                    <div class="col-sm-5">
-                                                        <div class="input-group date datetimepicker5 pull-left">
-                                                            <span class="input-group-addon">
-                                                                <span class="glyphicon-calendar glyphicon"></span>
-                                                            </span>
-                                                            <input type="text" id="project-start-time" class="form-control" data-date-format="YYYY-MM-DD" placeholder="开始时间">
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-5">
-                                                        <div class="input-group date datetimepicker5 pull-left">
-                                                            <span class="input-group-addon">
-                                                                <span class="glyphicon-calendar glyphicon"></span>
-                                                            </span>
-                                                            <input type="text" id="project-end-time" class="form-control" data-date-format="YYYY-MM-DD" placeholder="截止时间">
-                                                        </div>
+                                                    <label for="project-introduction" class="col-sm-2 control-label">项目标签：</label>
+                                                    <div class="col-sm-10 paddleft0">
+                                                        <input type="text" class="form-control" id="project-name" placeholder="创建与项目关联的标签，以便你的项目更容易被找到；多个标签之间请用','隔开。">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="project-introduction" class="col-sm-2 control-label">项目简介</label>
+                                                    <div class="col-sm-12">
+                                                        <hr style="margin-bottom:0px;margin-top:0px;border-top:1px dotted #ddd5d5;HEIGHT:0;" />
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="project-time" class="col-sm-2 control-label">预计筹资：</label>
+                                                    <div class="col-sm-3 paddright0 paddleft0">
+                                                        <input type="text" id="project-day" class=" form-control" placeholder="不能小于0" />
+                                                    </div>
+                                                    <div class="col-lg-1 paddtop2">元</div>
+                                                    <label for="project-time" class="col-sm-2 control-label">招募成员：</label>
+                                                    <div class="col-sm-3 paddright0 paddleft0">
+                                                        <input type="text" id="project-day" class=" form-control" placeholder="不能小于0" />
+                                                    </div>
+                                                    <div class="col-lg-1 paddtop2">人</div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="project-time" class="col-sm-2 control-label"></label>
                                                     <div class="col-sm-10">
-                                                        <textarea rows="5" class="form-control" id="project-introduction" placeholder="填写项目简介…"></textarea>
+                                                        <span class="fz12" style="color:#808080">可根据需要填写填写筹资金额或超募成员数量，可同时填写两项。</span>
                                                     </div>
                                                 </div>
-                                                <!--<div class="form-group">
-                                                    <label for="project-introduction" class="col-sm-2 control-label">详情描述</label>
-                                                    <div class="col-sm-10">
-                                                        <textarea rows="5" class="form-control" id="project-introduction" placeholder="填写项目简介（文本编辑框）…"></textarea>
-                                                    </div>
-                                                </div>-->
                                                 <div class="form-group">
-                                                    <div class="col-sm-offset-4 col-sm-12">
-                                                        <button type="submit" class="btn btn-primary pull-right">下一步</button>
+                                                    <div class="col-sm-12">
+                                                        <hr style="margin-bottom:0px;margin-top:0px;border-top:1px dotted #ddd5d5;HEIGHT:0;" />
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="project-introduction" class="col-sm-2 control-label">项目的描述：</label>
+                                                    <div class="col-sm-10 paddleft0">
+                                                        <textarea rows="3" class="form-control" id="project-introduction" placeholder="请勿超过60字，请用简明的语言归纳项目的主题，这段文字将在展示项目预览界面显示给大家"></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group text-center">
+                                                    <label for="project-introduction" class="col-sm-2 control-label"></label>
+                                                    <div class=" col-sm-10">
+                                                        <button type="submit" class="btn btn-success">下一步</button>
                                                     </div>
                                                 </div>
                                             </form>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 text-left">
-                                        <div class="row">
-                                            <a class="pull-right text-left" href="#">
-                                                <img class="media-object" id="preview-img" width="220" height="150" style="width:220px;height:150px;" src="../img/bg_plists_thumb.png" alt="220*150">
+                                        <div class="thumbnail">
+                                           <img id="preview-img" width="220" height="150" style="width:220px;height:150px;" src="../img/bg_plists_thumb.png" alt="220*150">
+                                            <div class="caption">
+                                                <h5><a href="project-view.html" title="有梦想，就有新世界——扶持创业人计划">有梦想，就有新世界——扶持创业人计划</a> </h5>
+                                                <label class="small"> 项目经理： <strong><a href="project-view.html">王二者一</a></strong></label>
+                                            </div>
+                                            <div class="progress">
+                                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                                    <span class="sr-only">60% 完成</span>
+                                                </div>
+                                            </div>
+                                            <div class="item-rate clearfix small">
+                                                <span class="rate1">
+                                                    <em>60%</em><br>已达
+                                                </span>
+                                                <span class="rate2">
+                                                    <em>￥1,247</em><br>已筹资
+                                                </span>
+                                                <span class="rate3">
+                                                    <em>16天</em><br>剩余时间
+                                                </span>
+                                            </div>
 
-                                            </a>
-                                        </div><!--<div style="color:#808080;font-size:13px;" class="martop10">目标:</div>-->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
