--- a/admin/info-center-inbox.html
+++ b/admin/info-center-inbox.html
@@ -291,7 +291,7 @@
     <script src="../js/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
     <script src="../js/bootstrap-datetimepicker/js/locale/zh-cn.js"></script>
     <script src="../js/bootstrap-datetimepicker/js/locale/ru.js"></script>
-    <script src="../js/chosen/chosen.jquery-1.2.0.js"></script>
+    <script src="../js/chosen/chosen.jquery.js"></script>
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
